k8s/int/apps/api-tests/deployment.yaml
---
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: mino-api-tests
spec:
  replicas: 0
  selector:
    matchLabels:
      app: mino-api-tests
