k8s/int/apps/api-tests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mino-api-tests
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - secretName: mino-api-tls
      hosts:
        - mino-api-staging.int.us-east-1.dev.gen6bk.com
  rules:
    - host: mino-api-staging.int.us-east-1.dev.gen6bk.com
      http:
        paths:
          - path: /api-tests/v1
            backend:
              serviceName: mino-api-tests
              servicePort: https
